[tool.poetry]
name = "repl_python3_auto-commit-2"
version = "0.1.0"
description = ""
authors = ["OwenNg <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
